--- a/app/src/main/res/layout/contact_us_fragment.xml
+++ b/app/src/main/res/layout/contact_us_fragment.xml
@@ -35,7 +35,7 @@
                     app:layout_constraintStart_toStartOf="@id/guideline_start"
                     app:layout_constraintTop_toTopOf="parent" />
 
-                <androidx.appcompat.widget.AppCompatSpinner
+                <Spinner
                     android:id="@+id/spinner_category"
                     style="@style/BackgroundSpinner"
                     android:layout_width="0dp"
