--- a/app/src/main/res/layout/attachment_gallery_folders_item.xml
+++ b/app/src/main/res/layout/attachment_gallery_folders_item.xml
@@ -20,7 +20,7 @@
         android:layout_height="200dp"
         android:onClick="@{() -> clickListener.onClick(galleryFolder)}">
 
-        <androidx.appcompat.widget.AppCompatImageView
+        <ImageView
             android:id="@+id/imageView_folder_thumbnail"
             android:layout_width="0dp"
             android:layout_height="0dp"
@@ -32,21 +32,22 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:src="@tools:sample/backgrounds/scenic" />
 
-
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_black_gradient"
+            android:orientation="horizontal"
             android:padding="@dimen/small_padding"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
-            <androidx.appcompat.widget.AppCompatImageView
+            <ImageView
                 android:id="@+id/imageView_folder"
                 android:layout_width="16dp"
                 android:layout_height="16dp"
                 android:src="@drawable/ic_folder_primary"
+                android:layout_gravity="center"
                 android:tint="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -57,6 +58,7 @@
                 style="@style/SmallBodyTextView.White"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:layout_marginStart="@dimen/small_margin"
                 android:layout_marginEnd="@dimen/small_margin"
                 android:text="@{galleryFolder.folderName}"
@@ -69,7 +71,7 @@
             <TextView
                 android:id="@+id/textView_files_quantity"
                 style="@style/SmallBodyTextView.White"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/small_margin"
                 android:text="@{String.valueOf(galleryFolder.quantity)}"
@@ -78,8 +80,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="999" />
 
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
