--- a/app/src/main/res/layout/image_selector_bottom_sheet_fragment.xml
+++ b/app/src/main/res/layout/image_selector_bottom_sheet_fragment.xml
@@ -7,82 +7,71 @@
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:background="?attr/attrBackgroundColorBackground"
         android:minHeight="56dp"
         tools:context=".ui.imagePicker.ImageSelectorBottomSheetFragment">
 
         <!-- TITLE -->
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/container_title"
-            android:layout_width="0dp"
-            android:layout_height="56dp"
-            android:paddingStart="@dimen/normal_padding"
-            android:paddingEnd="@dimen/normal_padding"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <TextView
-                android:id="@+id/textView_title"
-                style="@style/BodyTextView"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:alpha="0.54"
-                android:text="@string/text_change_profile_photo"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <TextView
+            android:id="@+id/textView_title"
+            style="@style/BodyTextView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0.54"
+            android:padding="@dimen/normal_padding"
+            android:text="@string/text_change_profile_photo" />
 
         <!-- CAMERA OPTION -->
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:id="@+id/container_camera_option"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:clickable="true"
             android:focusable="true"
             android:foreground="?attr/selectableItemBackground"
+            android:gravity="center"
             android:paddingStart="@dimen/normal_padding"
             android:paddingEnd="@dimen/normal_padding"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/container_title">
+            app:layout_constraintTop_toBottomOf="@+id/textView_title">
 
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/imageView_camera"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/ic_camera_primary"
-                app:tint="@color/colorSecondaryDark"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:tint="@color/colorSecondaryDark" />
 
             <TextView
                 style="@style/BodyTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/x_large_margin"
+                android:layout_weight="1"
                 android:text="@string/text_take_photo"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/imageView_camera"
                 app:layout_constraintTop_toTopOf="parent" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
 
         <!-- GALLERY OPTION -->
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:id="@+id/container_gallery_option"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:clickable="true"
             android:focusable="true"
+            android:gravity="center"
             android:foreground="?attr/selectableItemBackground"
             android:paddingStart="@dimen/normal_padding"
             android:paddingEnd="@dimen/normal_padding"
@@ -104,6 +93,7 @@
                 style="@style/BodyTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:layout_marginStart="@dimen/x_large_margin"
                 android:text="@string/text_select_photo"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -111,15 +101,17 @@
                 app:layout_constraintStart_toEndOf="@id/imageView_gallery"
                 app:layout_constraintTop_toTopOf="parent" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
 
         <!-- GALLERY OPTION -->
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:id="@+id/container_default"
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:clickable="true"
             android:focusable="true"
+            android:orientation="horizontal"
+            android:gravity="center"
             android:foreground="?attr/selectableItemBackground"
             android:paddingStart="@dimen/normal_padding"
             android:paddingEnd="@dimen/normal_padding"
@@ -132,23 +124,17 @@
                 android:layout_width="24dp"
                 android:layout_height="24dp"
                 android:src="@drawable/ic_restore"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 app:tint="@color/colorSecondaryDark" />
 
             <TextView
                 style="@style/BodyTextView"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:layout_weight="1"
                 android:layout_marginStart="@dimen/x_large_margin"
-                android:text="@string/text_select_default"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/imageView_default"
-                app:layout_constraintTop_toTopOf="parent" />
+                android:text="@string/text_select_default" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 </layout>
