--- a/app/src/main/res/layout/language_selection_dialog_fragment_item.xml
+++ b/app/src/main/res/layout/language_selection_dialog_fragment_item.xml
@@ -38,9 +38,11 @@
             app:srcCompat="@drawable/ic_language_selected"
             tools:visibility="visible" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center"
             android:background="?attr/attrBackgroundColorBackgroundDialog"
             android:padding="@dimen/normal_padding">
 
@@ -49,9 +51,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:flag="@{language.iso}"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 tools:src="@drawable/ic_spanish_flag" />
 
             <TextView
@@ -62,12 +61,9 @@
                 android:layout_marginTop="@dimen/small_margin"
                 android:text="@{language.language}"
                 android:textSize="@dimen/small_text_size"
-                app:layout_constraintEnd_toEndOf="@id/imageView_flag"
-                app:layout_constraintStart_toStartOf="@id/imageView_flag"
-                app:layout_constraintTop_toBottomOf="@id/imageView_flag"
                 tools:text="Portugues" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
 
     </com.google.android.material.card.MaterialCardView>
 </layout>
