--- a/app/src/main/res/layout/napoleon_keyboard_emoji_page_fragment.xml
+++ b/app/src/main/res/layout/napoleon_keyboard_emoji_page_fragment.xml
@@ -7,16 +7,17 @@
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:background="@color/white"
         tools:context=".ui.napoleonKeyboardEmojiPage.NapoleonKeyboardEmojiPageFragment">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView_emojis"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -26,5 +27,5 @@
             tools:itemCount="100"
             tools:listitem="@layout/napoleon_keyboard_emoji_page_fragment_item" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 </layout>
