--- a/app/src/main/res/layout/napoleon_keyboard_sticker_page_fragment.xml
+++ b/app/src/main/res/layout/napoleon_keyboard_sticker_page_fragment.xml
@@ -7,15 +7,15 @@
 
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".ui.napoleonKeyboardStickerPage.NapoleonKeyboardStickerPageFragment">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerView_napoleon_gif"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -25,5 +25,5 @@
             tools:itemCount="10"
             tools:listitem="@layout/napoleon_keyboard_sticker_viewpager_item" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 </layout>
