--- a/app/src/main/res/drawable/bg_home_item.xml
+++ b/app/src/main/res/drawable/bg_home_item.xml
@@ -1,16 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <item android:left="78dp">
-        <shape android:shape="rectangle">
-            <solid android:color="?attr/attrSeparatorColor" />
-        </shape>
-    </item>
-
-    <item android:bottom="1dp">
-        <shape android:shape="rectangle">
-            <solid android:color="?attr/attrBackgroundColorBackground" />
-        </shape>
-    </item>
-
+<item android:height="1dp" android:gravity="bottom">
+    <shape android:shape="rectangle">
+        <solid android:color="?attr/attrSeparatorColor" />
+    </shape>
+</item>
 </layer-list>
