--- a/app/src/main/res/layout/home_fragment_item.xml
+++ b/app/src/main/res/layout/home_fragment_item.xml
@@ -67,11 +67,11 @@
             android:gravity="center"
             android:textSize="@dimen/badge_text_size"
             android:visibility="invisible"
-            app:layout_constraintBottom_toBottomOf="@id/linear_container"
+            app:layout_constraintBottom_toBottomOf="@id/textView_message"
             app:layout_constraintEnd_toEndOf="@id/textView_hora"
-            app:layout_constraintTop_toTopOf="@+id/linear_container"
-            app:unreadMessages="@{conversation.messagesUnReads}"
+            app:layout_constraintTop_toTopOf="@+id/textView_message"
             app:typeMessage="@{conversation.message.messageType}"
+            app:unreadMessages="@{conversation.messagesUnReads}"
             tools:text="100"
             tools:visibility="visible" />
 
@@ -79,10 +79,11 @@
             android:id="@+id/imageView_status_message"
             android:layout_width="17dp"
             android:layout_height="17dp"
-            app:layout_constraintBottom_toBottomOf="@+id/linear_container"
-            app:layout_constraintEnd_toEndOf="parent"
             android:visibility="gone"
-            app:layout_constraintTop_toTopOf="@+id/linear_container"
+            app:layout_constraintBottom_toBottomOf="@+id/textView_message"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/textView_unread_messages"
+            app:layout_constraintTop_toTopOf="@+id/textView_message"
             app:statusMessage="@{conversation.message}"
             tools:src="@drawable/ic_message_readed"
             tools:visibility="visible" />
@@ -96,7 +97,6 @@
             android:ellipsize="end"
             android:lines="1"
             app:layout_constraintEnd_toStartOf="@id/textView_hora"
-            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@id/imageView_user_image"
             app:layout_constraintTop_toTopOf="parent"
             app:name="@{conversation.contact}"
@@ -121,43 +121,35 @@
             app:nickname="@{conversation.contact}"
             tools:text="@tools:sample/first_names" />
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:id="@+id/linear_container"
+        <ImageView
+            android:id="@+id/imageView_message_option_start_icon"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
+            android:layout_marginEnd="@dimen/x_small_margin"
+            android:visibility="gone"
+            app:iconByConversation="@{conversation}"
+            app:layout_constraintBottom_toBottomOf="@+id/textView_message"
+            app:layout_constraintEnd_toStartOf="@id/textView_message"
+            app:layout_constraintStart_toStartOf="@+id/textView_user_nickname"
+            app:layout_constraintTop_toTopOf="@+id/textView_message"
+            tools:srcCompat="@drawable/ic_call_missed_red"
+            tools:visibility="visible" />
+
+        <TextView
+            android:id="@+id/textView_message"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/normal_margin"
-            android:layout_marginEnd="@dimen/normal_margin"
-            android:gravity="center"
+            android:layout_gravity="center_vertical"
+            android:layout_marginTop="@dimen/x_small_margin"
+            android:ellipsize="end"
+            android:gravity="center_vertical"
+            android:lines="1"
+            app:bodyConversation="@{conversation}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/textView_unread_messages"
-            app:layout_constraintStart_toEndOf="@+id/imageView_user_image"
-            app:layout_constraintTop_toBottomOf="@+id/textView_user_nickname">
-
-            <ImageView
-                android:id="@+id/imageView_message_option_start_icon"
-                android:layout_width="16dp"
-                android:layout_height="16dp"
-                android:layout_marginEnd="@dimen/x_small_margin"
-                android:visibility="gone"
-                app:iconByConversation="@{conversation}"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageView_user_image"
-                app:layout_constraintTop_toBottomOf="@+id/textView_user_nickname"
-                tools:srcCompat="@drawable/ic_call_missed_red"
-                tools:visibility="visible" />
-
-            <TextView
-                android:id="@+id/textView_message"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:ellipsize="end"
-                android:gravity="center_vertical"
-                android:lines="1"
-                app:bodyConversation="@{conversation}"
-                tools:text="LLamada perdida" />
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
+            app:layout_constraintStart_toEndOf="@+id/imageView_message_option_start_icon"
+            app:layout_constraintTop_toBottomOf="@+id/textView_user_nickname"
+            tools:text="LLamada perdida" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
