-Barrido de vistas con cambio de constraints. -Crash cuando se elimina o bloquea un contacto.

--- a/app/src/main/res/layout/home_fragment_item.xml
+++ b/app/src/main/res/layout/home_fragment_item.xml
@@ -81,8 +81,7 @@
             android:layout_height="17dp"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/textView_message"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/textView_unread_messages"
+            app:layout_constraintEnd_toEndOf="@+id/textView_hora"
             app:layout_constraintTop_toTopOf="@+id/textView_message"
             app:statusMessage="@{conversation.message}"
             tools:src="@drawable/ic_message_readed"
@@ -141,6 +140,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:layout_marginTop="@dimen/x_small_margin"
+            android:layout_marginEnd="@dimen/normal_margin"
             android:ellipsize="end"
             android:gravity="center_vertical"
             android:lines="1"
