--- a/app/src/main/res/layout/self_destruct_time_dialog_fragment.xml
+++ b/app/src/main/res/layout/self_destruct_time_dialog_fragment.xml
@@ -151,61 +151,51 @@
 
         </ScrollView>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/container_bottom_options"
+        <View
+            android:id="@+id/view_radio_group_separator"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="1dp"
+            android:background="@color/separator"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/scrollView_radioGroup">
+            app:layout_constraintTop_toBottomOf="@+id/scrollView_radioGroup" />
 
-            <View
-                android:id="@+id/view_radio_group_separator"
-                android:layout_width="0dp"
-                android:layout_height="1dp"
-                android:background="@color/separator"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+        <TextView
+            android:id="@+id/textView_info"
+            style="@style/SmallBodyTextView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/small_margin"
+            android:paddingStart="@dimen/large_padding"
+            android:paddingEnd="@dimen/large_padding"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/view_radio_group_separator"
+            tools:text="@string/text_info_message_self_destruction" />
 
-            <TextView
-                android:id="@+id/textView_info"
-                style="@style/SmallBodyTextView"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/small_margin"
-                android:paddingStart="@dimen/large_padding"
-                android:paddingEnd="@dimen/large_padding"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/view_radio_group_separator"
-                tools:text="@string/text_info_message_self_destruction" />
+        <Button
+            android:id="@+id/button_accept"
+            style="@style/AppPrimaryButtonText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/small_margin"
+            android:layout_marginEnd="@dimen/small_margin"
+            android:layout_marginBottom="@dimen/small_margin"
+            android:text="@string/text_accept"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/textView_info" />
 
-            <Button
-                android:id="@+id/button_accept"
-                style="@style/AppPrimaryButtonText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/small_margin"
-                android:layout_marginEnd="@dimen/small_margin"
-                android:layout_marginBottom="@dimen/small_margin"
-                android:text="@string/text_accept"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/textView_info" />
-
-            <com.google.android.material.button.MaterialButton
-                android:id="@+id/button_cancel"
-                style="@style/AppPrimaryButtonText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="@dimen/small_margin"
-                android:text="@string/text_cancel"
-                app:layout_constraintBottom_toBottomOf="@id/button_accept"
-                app:layout_constraintEnd_toStartOf="@id/button_accept"
-                app:layout_constraintTop_toTopOf="@id/button_accept" />
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/button_cancel"
+            style="@style/AppPrimaryButtonText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="@dimen/small_margin"
+            android:text="@string/text_cancel"
+            app:layout_constraintBottom_toBottomOf="@id/button_accept"
+            app:layout_constraintEnd_toStartOf="@id/button_accept"
+            app:layout_constraintTop_toTopOf="@id/button_accept" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
