--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -265,7 +265,11 @@
         tools:layout="@layout/appearance_settings_fragment">
         <action
             android:id="@+id/action_appearanceSettingsFragment_to_colorSchemeFragment"
-            app:destination="@id/colorSchemeFragment" />
+            app:destination="@id/colorSchemeFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right"/>
         <action
             android:id="@+id/action_appearanceSettingsFragment_to_userDisplayFormatDialogFragment"
             app:destination="@id/userDisplayFormatDialogFragment" />
