--- a/app/src/main/res/values-es/invite_someone.xml
+++ b/app/src/main/res/values-es/invite_someone.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="text_info_invite_someone">Protege la PRIVACIDAD de tus amigos.\nInvítalos a usar NapoleoN Chat.</string>
-    <string name="text_share_link_android">¡Te invito a descargar esta súper app!\nhttp://bit.ly/NapoleonAndroid</string>
-    <string name="text_share_link_ios">¡Te invito a descargar esta súper app!\nhttp://bit.ly/NapoleonIOS</string>
+    <string name="text_share_link">¡Te invito a descargar esta súper app!\nhttps://napoleon.chat/app</string>
 </resources>
