--- a/app/src/main/res/values/invite_someone.xml
+++ b/app/src/main/res/values/invite_someone.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="text_info_invite_someone">Protect the privacy of your friends.\nInvite them to use NapoleoN Chat.</string>
-    <string name="text_share_link_android">I invite you to download this super app!\nhttp://bit.ly/NapoleonAndroid</string>
-    <string name="text_share_link_ios">I invite you to download this super app!\nhttp://bit.ly/NapoleonIOS</string>
+    <string name="text_share_link">I invite you to download this super app!\nhttps://napoleon.chat/app</string>
 </resources>
