--- a/app/src/main/res/values-fr/general.xml
+++ b/app/src/main/res/values-fr/general.xml
@@ -81,4 +81,5 @@
     <string name="text_attch_doc_not_allowed">Le fichier sélectionné est pas autorisé</string>
     <string name="text_attch_doc_size_exceed">Le fichier sélectionné dépasse la taille maximale autorisée (100MB)</string>
     <string name="text_reject">Refuser</string>
+    <string name="text_count_messages">Des postes</string>
 </resources>
