--- a/app/src/main/res/values/general.xml
+++ b/app/src/main/res/values/general.xml
@@ -101,4 +101,5 @@
     <string name="text_attch_doc_size_exceed">The selected file exceeds the allowed size (100MB)</string>
     <string name="unicode_no_break_space" translatable="false">\u00A0</string>
     <string name="text_reject">Reject</string>
+    <string name="text_count_messages">Messages</string>
 </resources>
